--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -49,39 +49,12 @@ nlu:
     - no way
     - not really
 
-- intent: mood_great
+- intent: indeterminate
   examples: |
-    - perfect
-    - great
-    - amazing
-    - feeling like a king
-    - wonderful
-    - I am feeling very good
-    - I am great
-    - I am amazing
-    - I am going to save the world
-    - super stoked
-    - extremely good
-    - so so perfect
-    - so good
-    - so perfect
-
-- intent: mood_unhappy
-  examples: |
-    - my day was horrible
-    - I am sad
-    - I don't feel very well
-    - I am disappointed
-    - super sad
-    - I'm so sad
-    - sad
-    - very sad
-    - unhappy
-    - not good
-    - not very good
-    - extremly sad
-    - so saad
-    - so sad
+    - i dont know
+    - doesent matter
+    - dont care
+    - nevermind
 
 - intent: bot_challenge
   examples: |
@@ -89,3 +62,8 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+    - is this a chatbot
+    - is this a real person
+    - you're a bot, aren't you?
+    - are u there?
+    - who are you?
