--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,29 +2,19 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: conversation affirm
   steps:
   - intent: greet
   - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
+  - action: utter_ask
   - intent: affirm
-  - action: utter_happy
+  - action: utter_affirm_help
 
-- story: sad path 2
+- story: conversation deny
   steps:
   - intent: greet
   - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
+  - action: utter_ask
   - intent: deny
-  - action: utter_goodbye
+  - action: utter_deny_help
+
