--- a/data/rules.yml
+++ b/data/rules.yml
@@ -6,10 +6,11 @@ rules:
   steps:
     - intent: greet
     - action: utter_greet
-- rule: fallback
-  steps:
-    - intent: nlu_fallback
-    - action: utter_default
+
+#- rule: fallback
+#  steps:
+#    - intent: nlu_fallback
+#    - action: utter_fallback
 
 - rule: Say goodbye anytime the user says goodbye
   steps:
