--- a/data/rules.yml
+++ b/data/rules.yml
@@ -7,6 +7,7 @@ rules:
     - intent: greet
     - action: utter_greet
 
+# move to stories
 #- rule: fallback
 #  steps:
 #    - intent: nlu_fallback
